--- a/refer-effect/mouseEffect/javascriptME08.html
+++ b/refer-effect/mouseEffect/javascriptME08.html
@@ -21,6 +21,9 @@
             z-index: -1;
         }
 
+        .info {
+            z-index: 10;
+        }
 
         .mouseCont {
             display: flex;
@@ -234,25 +237,6 @@
         </ul>
     </div>
     ​
-    <div class="info left list">
-        <ul>
-            <li>multiply</li>
-            <li>screen</li>
-            <li>overlay</li>
-            <li>darken</li>
-            <li>lighten</li>
-            <li>color-dodge</li>
-            <li>color-burn</li>
-            <li>hard-light</li>
-            <li>soft-light</li>
-            <li class="active">difference</li>
-            <li>exclusion</li>
-            <li>hue</li>
-            <li>saturation</li>
-            <li>color</li>
-            <li>luminosity</li>
-        </ul>
-    </div>
 
 
 
@@ -283,7 +267,7 @@
                     </div>
                     <div class="view-cont">
                         <div>
-<pre><code class="language-html">&lt;!-- contents --&gt;
+<pre><code class="language-html"> &lt;!-- contents --&gt;
 &lt;main&gt;
     &lt;div class="cursor"&gt;&lt;/div&gt;
 
@@ -291,53 +275,97 @@
         &lt;p&gt;&lt;em&gt;Love&lt;/em&gt; asks me no questions, and gives me endless support.&lt;/p&gt;
         &lt;h2&gt;&lt;em&gt;사랑은&lt;/em&gt; 내게 질문하지 않으며, 다만 끝없는 지지를 준다.&lt;/h2&gt;
     &lt;/article&gt;
+    &lt;div class="box-wrap"&gt;
+        &lt;div class="box-item two"&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+        &lt;/div&gt;
+    &lt;/div&gt;
+    
 &lt;/main&gt;
 &lt;!-- contents --&gt;
-
-
-
-&lt;!-- info --&gt;
-&lt;div class="info"&gt;
-    &lt;h1&gt;&lt;a href="index.html"&gt;Javascript Mouse Effect03&lt;/a&gt;&lt;/h1&gt;
-    &lt;p&gt;마우스 이펙트 - 브랜딩 이펙트&lt;/p&gt;
-&lt;/div&gt;
-​
-&lt;div class="info right"&gt;
-    &lt;ul&gt;
-        &lt;li&gt;&lt;a href="javascriptME01.html"&gt;1&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="javascriptME02.html"&gt;2&lt;/a&gt;&lt;/li&gt;
-        &lt;li class="active"&gt;&lt;a href="javascriptME03.html"&gt;3&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="javascriptME04.html"&gt;4&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="javascriptME05.html"&gt;5&lt;/a&gt;&lt;/li&gt;
-    &lt;/ul&gt;
-    &lt;ul&gt;
-        &lt;li&gt;&lt;a href="jqueryME01.html"&gt;1&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="jqueryME02.html"&gt;2&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="jqueryME03.html"&gt;3&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="jqueryME04.html"&gt;4&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="jqueryME05.html"&gt;5&lt;/a&gt;&lt;/li&gt;
-    &lt;/ul&gt;
-&lt;/div&gt;
-​
-&lt;div class="info left list"&gt;
-    &lt;ul&gt;
-        &lt;li&gt;multiply&lt;/li&gt;
-        &lt;li&gt;screen&lt;/li&gt;
-        &lt;li&gt;overlay&lt;/li&gt;
-        &lt;li&gt;darken&lt;/li&gt;
-        &lt;li&gt;lighten&lt;/li&gt;
-        &lt;li&gt;color-dodge&lt;/li&gt;
-        &lt;li&gt;color-burn&lt;/li&gt;
-        &lt;li&gt;hard-light&lt;/li&gt;
-        &lt;li&gt;soft-light&lt;/li&gt;
-        &lt;li class="active"&gt;difference&lt;/li&gt;
-        &lt;li&gt;exclusion&lt;/li&gt;
-        &lt;li&gt;hue&lt;/li&gt;
-        &lt;li&gt;saturation&lt;/li&gt;
-        &lt;li&gt;color&lt;/li&gt;
-        &lt;li&gt;luminosity&lt;/li&gt;
-    &lt;/ul&gt;
-&lt;/div&gt;
 </code></pre>
                         </div>
                         <div>
@@ -352,6 +380,9 @@
     z-index: -1;
 }
 
+.info {
+    z-index: 10;
+}
 
 .mouseCont {
     display: flex;
@@ -363,7 +394,9 @@
     height: 100vh;
     overflow: hidden;
     font-family: 'NEXON Lv1 Gothic OTF';
-    cursor: none;
+    /* cursor: none; */
+    position: relative;
+    z-index: 10;
 }
 .mouseCont p {
     font-size: 2.5vw;
@@ -404,31 +437,59 @@
     text-decoration: underline;
     color : #c729a5;
 }
+.box-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    left: 0; top: 0;
+    width: 100%;
+    height: 100vh;
+}
+.box-item {
+    display: grid;
+    grid-template-columns: repeat(10, 50px);
+    grid-template-rows: repeat(4, 50px);
+    grid-gap : 50px;
+}
+.box-item .item {
+    background-color: rgba(255,255,255, 0.3);
+
+}
+.box-item.two .item {
+    border-radius : 50%;
+    transform : scale(0.2);
+}
 </code></pre>
                         </div>
                         <div>
-<pre><code class="language-javascript">const w = $(".cursor").width() /2;
-const h = $(".cursor").height() /2;  // 넓이 높이를 구해서 변수에 저장함
+<pre><code class="language-javascript">window.addEventListener("mousemove", function(e){
+    const mouseX = e.clientX;
+    const mouseY = e.clientY;
+    const item = document.querySelectorAll(".item");
 
+    item.forEach(item =>{
+        // const itemX = item.offsetLeft + 25;
+        // const itemY = item.offsetTop + 25;
+        // const diffX = mouseX - itemX;
+        // const diffY = mouseY - itemY;
+        // const radians = Math.atan2(diffX , diffY);
+        // const angle = radians * 180 / Math.PI;
 
-//움직임 효과
-$(window).mousemove(function(e){
-    gsap.to(".cursor", {duration:0.4 , left : e.pageX -w, top : e.pageY -h});
-});
+        // item.style.transform = "rotate("+angle+"deg)";
 
-//오버 효과
-$(".mouseCont p").hover(function(){
-    $(".cursor").addClass("active")
-} , function(){
-    $(".cursor").removeClass("active")
-});
+        const itemX = item.offsetLeft - mouseX;
+        const itemY = item.offsetTop - mouseY;
 
+        const dist = Math.sqrt(itemX * itemX + itemY * itemY);
+        const score = Math.exp(dist * -0.003);
 
-//출력용
-$(".info.left.list li").click(function(){
-    $(".info.left.list li").removeClass();
-    $(this).addClass("active");
-    $(".cursor").css("mix-blend-mode" ,  $(this).text());
+        item.style.transform  = `scale(${score})`;
+    });
+
+    const cursor = document.querySelector(".cursor");
+    gsap.to(".cursor" , {duration: .3, left: mouseX , top : mouseY});
+
 })
 </code></pre>
                         </div>
