--- a/refer-effect/mouseEffect/jqueryME08.html
+++ b/refer-effect/mouseEffect/jqueryME08.html
@@ -21,6 +21,9 @@
             z-index: -1;
         }
 
+        .info {
+            z-index: 10;
+        }
 
         .mouseCont {
             display: flex;
@@ -225,25 +228,6 @@
         </ul>
     </div>
     ​
-    <div class="info left list">
-        <ul>
-            <li>multiply</li>
-            <li>screen</li>
-            <li>overlay</li>
-            <li>darken</li>
-            <li>lighten</li>
-            <li>color-dodge</li>
-            <li>color-burn</li>
-            <li>hard-light</li>
-            <li>soft-light</li>
-            <li class="active">difference</li>
-            <li>exclusion</li>
-            <li>hue</li>
-            <li>saturation</li>
-            <li>color</li>
-            <li>luminosity</li>
-        </ul>
-    </div>
 
 
 
@@ -274,7 +258,7 @@
                     </div>
                     <div class="view-cont">
                         <div>
-<pre><code class="language-html">&lt;!-- contents --&gt;
+<pre><code class="language-html"> &lt;!-- contents --&gt;
 &lt;main&gt;
     &lt;div class="cursor"&gt;&lt;/div&gt;
 
@@ -282,53 +266,96 @@
         &lt;p&gt;&lt;em&gt;Love&lt;/em&gt; asks me no questions, and gives me endless support.&lt;/p&gt;
         &lt;h2&gt;&lt;em&gt;사랑은&lt;/em&gt; 내게 질문하지 않으며, 다만 끝없는 지지를 준다.&lt;/h2&gt;
     &lt;/article&gt;
+    &lt;div class="box-wrap"&gt;
+        &lt;div class="box-item two"&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+            &lt;div class="item"&gt;&lt;/div&gt;
+        &lt;/div&gt;
+    &lt;/div&gt;
 &lt;/main&gt;
 &lt;!-- contents --&gt;
-
-
-
-&lt;!-- info --&gt;
-&lt;div class="info"&gt;
-    &lt;h1&gt;&lt;a href="index.html"&gt;Javascript Mouse Effect03&lt;/a&gt;&lt;/h1&gt;
-    &lt;p&gt;마우스 이펙트 - 브랜딩 이펙트&lt;/p&gt;
-&lt;/div&gt;
-​
-&lt;div class="info right"&gt;
-    &lt;ul&gt;
-        &lt;li&gt;&lt;a href="javascriptME01.html"&gt;1&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="javascriptME02.html"&gt;2&lt;/a&gt;&lt;/li&gt;
-        &lt;li class="active"&gt;&lt;a href="javascriptME03.html"&gt;3&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="javascriptME04.html"&gt;4&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="javascriptME05.html"&gt;5&lt;/a&gt;&lt;/li&gt;
-    &lt;/ul&gt;
-    &lt;ul&gt;
-        &lt;li&gt;&lt;a href="jqueryME01.html"&gt;1&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="jqueryME02.html"&gt;2&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="jqueryME03.html"&gt;3&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="jqueryME04.html"&gt;4&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="jqueryME05.html"&gt;5&lt;/a&gt;&lt;/li&gt;
-    &lt;/ul&gt;
-&lt;/div&gt;
-​
-&lt;div class="info left list"&gt;
-    &lt;ul&gt;
-        &lt;li&gt;multiply&lt;/li&gt;
-        &lt;li&gt;screen&lt;/li&gt;
-        &lt;li&gt;overlay&lt;/li&gt;
-        &lt;li&gt;darken&lt;/li&gt;
-        &lt;li&gt;lighten&lt;/li&gt;
-        &lt;li&gt;color-dodge&lt;/li&gt;
-        &lt;li&gt;color-burn&lt;/li&gt;
-        &lt;li&gt;hard-light&lt;/li&gt;
-        &lt;li&gt;soft-light&lt;/li&gt;
-        &lt;li class="active"&gt;difference&lt;/li&gt;
-        &lt;li&gt;exclusion&lt;/li&gt;
-        &lt;li&gt;hue&lt;/li&gt;
-        &lt;li&gt;saturation&lt;/li&gt;
-        &lt;li&gt;color&lt;/li&gt;
-        &lt;li&gt;luminosity&lt;/li&gt;
-    &lt;/ul&gt;
-&lt;/div&gt;
 </code></pre>
                         </div>
                         <div>
@@ -343,6 +370,9 @@
     z-index: -1;
 }
 
+.info {
+    z-index: 10;
+}
 
 .mouseCont {
     display: flex;
@@ -354,7 +384,9 @@
     height: 100vh;
     overflow: hidden;
     font-family: 'NEXON Lv1 Gothic OTF';
-    cursor: none;
+    /* cursor: none; */
+    position: relative;
+    z-index: 10;
 }
 .mouseCont p {
     font-size: 2.5vw;
@@ -395,31 +427,49 @@
     text-decoration: underline;
     color : #c729a5;
 }
+.box-item {
+    position: absolute;
+    left: 0; top: 0;
+    width: 100%;
+    height: 100vh;
+    align-content: center;
+    box-sizing: border-box;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.box-item .item {
+    width: 50px; height: 50px;
+    margin: 20px;
+    background-color: rgba(255,255,255, 0.3);
+}
 </code></pre>
                         </div>
                         <div>
-<pre><code class="language-javascript">const w = $(".cursor").width() /2;
-const h = $(".cursor").height() /2;  // 넓이 높이를 구해서 변수에 저장함
+<pre><code class="language-javascript">$(window).mousemove(function (e){
+    let pageX = e.pageX;
+    let pageY = e.pageY;
 
+    const mouseX = e.clientX;
+    const mouseY = e.clientY;
 
-//움직임 효과
-$(window).mousemove(function(e){
-    gsap.to(".cursor", {duration:0.4 , left : e.pageX -w, top : e.pageY -h});
-});
+    $(".item").each(function(index, item){
+        const itemX = $(this).offset().left + 25;
+        const itemY = $(this).offset().top + 25;    //가운데로 맞춰주기 위해 초기화
+        const diffX = mouseX - itemX;
+        const diffY = mouseY - itemY;
+        const radians = Math.atan2(diffY, diffX);
+        const angel = radians * 180 / Math.PI;
+        
+        $(this).css({"transform": "rotate(" + angel + "deg)"});
+    })
 
-//오버 효과
-$(".mouseCont p").hover(function(){
-    $(".cursor").addClass("active")
-} , function(){
-    $(".cursor").removeClass("active")
-});
+    //커서
+    gsap.to(".cursor", {duration: .3, left: pageX, top: pageY});
 
-
-//출력용
-$(".info.left.list li").click(function(){
-    $(".info.left.list li").removeClass();
-    $(this).addClass("active");
-    $(".cursor").css("mix-blend-mode" ,  $(this).text());
+    $(".pageX").text(pageX);
+    $(".pageY").text(pageY);
 })
 </code></pre>
                         </div>
