--- a/refer-effect/parallaxEffect/index.html
+++ b/refer-effect/parallaxEffect/index.html
@@ -39,6 +39,9 @@
             <li><a href="jqueryPE06.html">6</a></li>
             <li><a href="jqueryPE07.html">7</a></li>
             <li><a href="jqueryPE08.html">8</a></li>
+            <li><a href="parallaxApple.html">Scroll</a></li>
+            <li><a href="parallaxV.html">V</a></li>
+            <li><a href="parallaxVH.html">VH</a></li>
         </ul>
     </nav>
     
