--- a/refer-effect/parallaxEffect/parallaxVH.html
+++ b/refer-effect/parallaxEffect/parallaxVH.html
@@ -22,6 +22,7 @@
         * {
             margin: 0; padding: 0;
         }
+        a {text-decoration: none; color : #fff;}
         .parallax {
             background: #dbccb2;
             color: #fff;
@@ -136,8 +137,8 @@
     
     <!-- //info -->
     <header id="paraHeader">
-        <h1>Parallax Effect01</h1>
-        <p>패럴랙스 스크롤링 효과 - 가로 모드</p>
+        <h1><a href="index.html">Parallax EffectVH</a></h1>
+        <p>패럴랙스 스크롤링 효과 - 가로 세로 모드</p>
     </header>
     <!-- //header -->
 
