--- a/Memo.html
+++ b/Memo.html
@@ -1,99 +1,26 @@
- &lt;!-- contents --&gt;
- &lt;main&gt;
-    &lt;div class="cursor"&gt;&lt;/div&gt;
-
-    &lt;article class="mouseCont"&gt;
-        &lt;p&gt;&lt;em&gt;Love&lt;/em&gt; asks me no questions, and gives me endless support.&lt;/p&gt;
-        &lt;h2&gt;&lt;em&gt;사랑은&lt;/em&gt; 내게 질문하지 않으며, 다만 끝없는 지지를 준다.&lt;/h2&gt;
-    &lt;/article&gt;
-    &lt;div class="box-wrap"&gt;
-        &lt;div class="box-item two"&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
-            &lt;div class="item"&gt;&lt;/div&gt;
+&lt;!-- contents --&gt;
+&lt;main&gt;
+    &lt;div class="slider-wrap"&gt;
+        &lt;div class="slider-img"&gt;
+            &lt;div class="slider-inner"&gt;
+                &lt;div class="slider" data-name="이미지1"&gt;&lt;img src="../assets/img/bg1.jpg" alt="이미지1"&gt;&lt;/div&gt;
+                &lt;div class="slider" data-name="이미지2"&gt;&lt;img src="../assets/img/bg2.jpg" alt="이미지2"&gt;&lt;/div&gt;
+                &lt;div class="slider" data-name="이미지3"&gt;&lt;img src="../assets/img/bg3.jpg" alt="이미지3"&gt;&lt;/div&gt;
+                &lt;div class="slider" data-name="이미지4"&gt;&lt;img src="../assets/img/bg4.jpg" alt="이미지4"&gt;&lt;/div&gt;
+                &lt;div class="slider" data-name="이미지5"&gt;&lt;img src="../assets/img/bg5.jpg" alt="이미지5"&gt;&lt;/div&gt;
+            &lt;/div&gt;
         &lt;/div&gt;
-    &lt;/div&gt;
-   
+        &lt;div class="slider-btn"&gt;
+            &lt;a href="#" class="prev"&gt;prev&lt;/a&gt;
+            &lt;a href="#" class="next"&gt;next&lt;/a&gt;
+        &lt;/div&gt;
+        &lt;div class="slider-dot"&gt;
+            &lt;!-- &lt;a href="#" class="dot active"&gt;1&lt;/a&gt;
+            &lt;a href="#" class="dot"&gt;2&lt;/a&gt;
+            &lt;a href="#" class="dot"&gt;3&lt;/a&gt;
+            &lt;a href="#" class="dot"&gt;4&lt;/a&gt;
+            &lt;a href="#" class="dot"&gt;5&lt;/a&gt; --&gt;
+        &lt;/div&gt;
+    &lt;/div&gt;    
 &lt;/main&gt;
 &lt;!-- contents --&gt;
