--- a/refer-effect/sliderEffect/javascriptSE05.html
+++ b/refer-effect/sliderEffect/javascriptSE05.html
@@ -217,43 +217,62 @@
 .slider:nth-child(4){z-index: 2;}
 .slider:nth-child(5){z-index: 1;}
 .slider::before{content : attr(data-name);}
+
+.slider-btn a {
+    position: absolute;
+    top: 50%;
+    transform : translateY(-50%);
+    z-index: 1000;
+    width: 50px; height: 50px;
+    line-height: 50px;
+    background: rgba(0,0,0,0.4);
+    text-align: center;
+    transition: all 0.2s;
+    display: block;
+    text-decoration: none;
+    color : #fff;
+}
+.slider-btn a:hover {
+    background: rgba(241,96,86,1);
+}
+.slider-btn .prev {
+    left: 0;
+}
+.slider-btn .next {
+    right: 0;
+}
 </code></pre>
                         </div>
                         <div>
-<pre><code class="language-javascript">const sliderWrap = $(".slider-wrap");
-const sliderImg = $(".slider-img");
-const sliderInner = $(".slider-inner");
-const slider = $(".slider");
+<pre><code class="language-javascript">const sliderWrap = document.querySelector(".slider-wrap");
+const sliderImg = sliderWrap.querySelector(".slider-img");
+const sliderInner = sliderImg.querySelector(".slider-inner");
+const slider = sliderInner.querySelectorAll(".slider");
+const sliderBtn = sliderWrap.querySelectorAll(".slider-btn");
+const sliderBtnPrev = document.querySelector(".prev");
+const sliderBtnNext = document.querySelector(".next");
 
-let currentIndex = 0;
 let sliderCount = slider.length;
-let sliderWidth = slider.width();
-let sliderDuration = 600;
-let sliderEasing = "easeOutExpo";
+let sliderWidth = document.querySelector(".slider").offsetWidth;
+let currentIndex = 0;
 
-setInterval(function(){   //3초에 한번씩 왼쪽으로 이동
-    // sliderInner.animate({ left: "-800px" });
-    // sliderInner.animate({ left: "-1600px" });
-    // sliderInner.animate({ left: "-2400px" });
-    // sliderInner.animate({ left: "-3200px" });
-    // sliderInner.animate({ left: "-4000px" });
-    // sliderInner.animate({ left: "-0px" });
+function gotoSlider(num){
+    sliderInner.style.transition = "all 300ms";
+    sliderInner.style.transform = "translateX("+ -sliderWidth * num + "px)";
+    currentIndex = num;
+}
+function movePrev(){
+    let prevIndex = (currentIndex - 1) % sliderCount;
+    if( currentIndex == 0 ) prevIndex = sliderCount -1;
+    gotoSlider(prevIndex)
+}
+function moveNext(){
+    let nextIndex = (currentIndex + 1) % sliderCount;
+    gotoSlider(nextIndex)
+}
 
-    //currentIndex++;
-
-    // if( currentIndex &lt; 5 ) {
-    //     currentIndex++;
-    // } else {
-    //     currentIndex = 0;
-    // }
-    ( currentIndex &lt; sliderCount -1 ) ? currentIndex++ : currentIndex = 0 
-    (currentIndex &lt; sliderCount -1) ? currentIndex ++ : currentIndex = 0;
-
-    let sliderPosition = currentIndex * -sliderWidth;
-    sliderInner.animate({ left : sliderPosition }, sliderDuration , sliderEasing);
-
-    console.log(currentIndex);
-} , 3000);
+sliderBtnPrev.addEventListener("click" , movePrev);
+sliderBtnNext.addEventListener("click" , moveNext);
 </code></pre>
                         </div>
                     </div>
