--- a/refer-effect/sliderEffect/javascriptSE06.html
+++ b/refer-effect/sliderEffect/javascriptSE06.html
@@ -183,15 +183,28 @@
                     </div>
                     <div class="view-cont">
                         <div>
-<pre><code class="language-html"> &lt;!-- contents --&gt;
+<pre><code class="language-html">&lt;!-- contents --&gt;
 &lt;main&gt;
     &lt;div class="slider-wrap"&gt;
         &lt;div class="slider-img"&gt;
-            &lt;div class="slider" data-name="이미지1"&gt;&lt;img src="../assets/img/bg1.jpg" alt="이미지1"&gt;&lt;/div&gt;
-            &lt;div class="slider" data-name="이미지2"&gt;&lt;img src="../assets/img/bg2.jpg" alt="이미지2"&gt;&lt;/div&gt;
-            &lt;div class="slider" data-name="이미지3"&gt;&lt;img src="../assets/img/bg3.jpg" alt="이미지3"&gt;&lt;/div&gt;
-            &lt;div class="slider" data-name="이미지4"&gt;&lt;img src="../assets/img/bg4.jpg" alt="이미지4"&gt;&lt;/div&gt;
-            &lt;div class="slider" data-name="이미지5"&gt;&lt;img src="../assets/img/bg5.jpg" alt="이미지5"&gt;&lt;/div&gt;
+            &lt;div class="slider-inner"&gt;
+                &lt;div class="slider" data-name="이미지1"&gt;&lt;img src="../assets/img/bg1.jpg" alt="이미지1"&gt;&lt;/div&gt;
+                &lt;div class="slider" data-name="이미지2"&gt;&lt;img src="../assets/img/bg2.jpg" alt="이미지2"&gt;&lt;/div&gt;
+                &lt;div class="slider" data-name="이미지3"&gt;&lt;img src="../assets/img/bg3.jpg" alt="이미지3"&gt;&lt;/div&gt;
+                &lt;div class="slider" data-name="이미지4"&gt;&lt;img src="../assets/img/bg4.jpg" alt="이미지4"&gt;&lt;/div&gt;
+                &lt;div class="slider" data-name="이미지5"&gt;&lt;img src="../assets/img/bg5.jpg" alt="이미지5"&gt;&lt;/div&gt;
+            &lt;/div&gt;
+        &lt;/div&gt;
+        &lt;div class="slider-btn"&gt;
+            &lt;a href="#" class="prev"&gt;prev&lt;/a&gt;
+            &lt;a href="#" class="next"&gt;next&lt;/a&gt;
+        &lt;/div&gt;
+        &lt;div class="slider-dot"&gt;
+            &lt;!-- &lt;a href="#" class="dot active"&gt;1&lt;/a&gt;
+            &lt;a href="#" class="dot"&gt;2&lt;/a&gt;
+            &lt;a href="#" class="dot"&gt;3&lt;/a&gt;
+            &lt;a href="#" class="dot"&gt;4&lt;/a&gt;
+            &lt;a href="#" class="dot"&gt;5&lt;/a&gt; --&gt;
         &lt;/div&gt;
     &lt;/div&gt;    
 &lt;/main&gt;
@@ -219,7 +232,7 @@
 .slider-inner {
     overflow: hidden;
     position: relative;
-    width: 4000px;
+    /* width: 4000px; */
     height: 480px;
 }
 
@@ -243,43 +256,131 @@
 .slider:nth-child(4){z-index: 2;}
 .slider:nth-child(5){z-index: 1;}
 .slider::before{content : attr(data-name);}
+
+.slider-btn a {
+    position: absolute;
+    top: 50%;
+    transform : translateY(-50%);
+    z-index: 1000;
+    width: 50px; height: 50px;
+    line-height: 50px;
+    background: rgba(0,0,0,0.4);
+    text-align: center;
+    transition: all 0.2s;
+    display: block;
+    text-decoration: none;
+    color : #fff;
+}
+.slider-btn a:hover {
+    background: rgba(241,96,86,1);
+}
+.slider-btn .prev {
+    left: 0;
+}
+.slider-btn .next {
+    right: 0;
+}
+
+.slider-dot {
+    position: absolute;
+    left : 50%;
+    transform: translateX(-50%);
+    bottom: 20px;
+}
+.slider-dot .dot {
+    width: 20px; height: 20px;
+    background: rgba(0,0,0,0.4);
+    display: inline-block;
+    border-radius: 50%;
+    transition : all 0.3s;
+    text-indent: -9999px;
+    margin: 3px;
+}
+.slider-dot .dot.active {
+    background: #fff;
+}
 </code></pre>
                         </div>
                         <div>
-<pre><code class="language-javascript">const sliderWrap = $(".slider-wrap");
-const sliderImg = $(".slider-img");
-const sliderInner = $(".slider-inner");
-const slider = $(".slider");
+<pre><code class="language-javascript">const sliderWrap = document.querySelector(".slider-wrap");
+const sliderImg = sliderWrap.querySelector(".slider-img");
+const sliderInner = sliderImg.querySelector(".slider-inner");
+const slider = sliderInner.querySelectorAll(".slider");
+const sliderBtn = sliderWrap.querySelectorAll(".slider-btn");
+const sliderBtnPrev = document.querySelector(".prev");
+const sliderBtnNext = document.querySelector(".next");
+const sliderDot = sliderWrap.querySelector(".slider-dot");
 
-let currentIndex = 0;
 let sliderCount = slider.length;
-let sliderWidth = slider.width();
-let sliderDuration = 600;
-let sliderEasing = "easeOutExpo";
+let sliderWidth = document.querySelector(".slider").offsetWidth;
+let sliderTotalWidth = sliderWidth * sliderCount;
+let currentIndex = 0;
+let dotIndex = "";
 
-setInterval(function(){   //3초에 한번씩 왼쪽으로 이동
-    // sliderInner.animate({ left: "-800px" });
-    // sliderInner.animate({ left: "-1600px" });
-    // sliderInner.animate({ left: "-2400px" });
-    // sliderInner.animate({ left: "-3200px" });
-    // sliderInner.animate({ left: "-4000px" });
-    // sliderInner.animate({ left: "-0px" });
 
-    //currentIndex++;
+// 즉시 실행 함수
+(() => {
+    //이미지 가로값 세팅  , 애니메이션 
+    sliderInner.style.width = sliderTotalWidth + "px";
+    sliderInner.style.transition = "all 500ms ease-in";
+    sliderInner.style.left = 0;
 
-    // if( currentIndex &lt; 5 ) {
-    //     currentIndex++;
-    // } else {
-    //     currentIndex = 0;
-    // }
-    ( currentIndex &lt; sliderCount -1 ) ? currentIndex++ : currentIndex = 0 
-    (currentIndex &lt; sliderCount -1) ? currentIndex ++ : currentIndex = 0;
+    //닷 메뉴
+    slider.forEach((e, i) => {
+        let active = "";
+        if( i === 0 ) active = "active";
+        dotIndex += `<a href ='#' class='dot ${active}'>${i}</a>`
+    });
+    sliderDot.innerHTML = dotIndex;
+})()
 
-    let sliderPosition = currentIndex * -sliderWidth;
-    sliderInner.animate({ left : sliderPosition }, sliderDuration , sliderEasing);
 
-    console.log(currentIndex);
-} , 3000);
+
+
+//이미지 움직이기
+const gotoSlider = (num) => {
+    sliderInner.style.left = -sliderWidth * num + "px";
+    currentIndex = num;
+    dotActive();
+}
+
+//왼쪽
+const btnPrev = (e) => {
+    e.preventDefault();
+    let prevIndex = (currentIndex -1) % sliderCount;
+    if( currentIndex == 0 ) prevIndex = sliderCount -1;
+    gotoSlider(prevIndex)
+}
+
+//오른쪽
+const btnNext = (e) => {
+    e.preventDefault();
+    let nextIndex = (currentIndex +1)  % sliderCount;
+    gotoSlider(nextIndex);
+}
+
+function dotActive(){
+    sliderDot.querySelectorAll("a").forEach((e , i) => {
+        if( e.classList.contains("active") ){
+            e.classList.remove("active");
+        }
+    });
+    sliderDot.querySelectorAll("a")[currentIndex].classList.add("active");
+}
+
+
+// 닷 메뉴 button
+sliderDot.querySelectorAll("a").forEach((dot , index) => {
+    dot.addEventListener("click" , (e) => {
+        e.preventDefault();
+        gotoSlider(index);
+        dotActive();
+    })
+});
+
+
+sliderBtnPrev.addEventListener("click" , btnPrev);
+sliderBtnNext.addEventListener("click" , btnNext);
 </code></pre>
                         </div>
                     </div>
