--- a/refer-effect/sliderEffect/jquerySE04.html
+++ b/refer-effect/sliderEffect/jquerySE04.html
@@ -149,6 +149,19 @@
     &lt;/div&gt;    
 &lt;/main&gt;
 &lt;!-- contents --&gt;
+&lt;!-- contents --&gt;
+&lt;main&gt;
+    &lt;div class="slider-wrap"&gt;
+        &lt;div class="slider-img"&gt;
+            &lt;div class="slider" data-name="이미지1"&gt;&lt;img src="../assets/img/bg1.jpg" alt="이미지1"&gt;&lt;/div&gt;
+            &lt;div class="slider" data-name="이미지2"&gt;&lt;img src="../assets/img/bg2.jpg" alt="이미지2"&gt;&lt;/div&gt;
+            &lt;div class="slider" data-name="이미지3"&gt;&lt;img src="../assets/img/bg3.jpg" alt="이미지3"&gt;&lt;/div&gt;
+            &lt;div class="slider" data-name="이미지4"&gt;&lt;img src="../assets/img/bg4.jpg" alt="이미지4"&gt;&lt;/div&gt;
+            &lt;div class="slider" data-name="이미지5"&gt;&lt;img src="../assets/img/bg5.jpg" alt="이미지5"&gt;&lt;/div&gt;
+        &lt;/div&gt;
+    &lt;/div&gt;    
+&lt;/main&gt;
+&lt;!-- contents --&gt;
 </code></pre>
                         </div>
                         <div>
@@ -199,40 +212,39 @@
 </code></pre>
                         </div>
                         <div>
-<pre><code class="language-javascript">const sliderWrap = $(".slider-wrap");
-const sliderImg = $(".slider-img");
-const sliderInner = $(".slider-inner");
-const slider = $(".slider");
+<pre><code class="language-javascript">//sample1
+const sliderImg1 = $(".slider-img1");
+const sliderInner1 = $(".slider-inner1");
+const slider1 = $(".slider1");
+
+let currentIndex1 = 0;
+let sliderCount = slider1.length;
+let sliderHeight1 = slider1.height();
+
+setInterval(() => {
+    ( currentIndex1 &lt; 4 ) ? currentIndex1++ : currentIndex1 = 0;
+
+    let sliderPosition = currentIndex1 * -sliderHeight1;
+    sliderInner1.animate({ top : sliderPosition }, 600 , "easeOutExpo");
+
+}, 2000);
+
+
+// sample2
+const sliderImg = $(".slider-img2");
+const sliderInner = $(".slider-inner2");
+const slider = $(".slider.slider2");
 
 let currentIndex = 0;
-let sliderCount = slider.length;
-let sliderWidth = slider.width();
-let sliderDuration = 600;
-let sliderEasing = "easeOutExpo";
+let sliderHeight = slider.height();
 
-setInterval(function(){   //3초에 한번씩 왼쪽으로 이동
-    // sliderInner.animate({ left: "-800px" });
-    // sliderInner.animate({ left: "-1600px" });
-    // sliderInner.animate({ left: "-2400px" });
-    // sliderInner.animate({ left: "-3200px" });
-    // sliderInner.animate({ left: "-4000px" });
-    // sliderInner.animate({ left: "-0px" });
 
-    //currentIndex++;
-
-    // if( currentIndex &lt; 5 ) {
-    //     currentIndex++;
-    // } else {
-    //     currentIndex = 0;
-    // }
-    ( currentIndex &lt; sliderCount -1 ) ? currentIndex++ : currentIndex = 0 
-    (currentIndex &lt; sliderCount -1) ? currentIndex ++ : currentIndex = 0;
-
-    let sliderPosition = currentIndex * -sliderWidth;
-    sliderInner.animate({ left : sliderPosition }, sliderDuration , sliderEasing);
-
-    console.log(currentIndex);
-} , 3000);
+setInterval(function(){
+    sliderInner.animate({top : -sliderHeight} , 400, function(){
+        $(".slider.slider2:first-child").appendTo(sliderInner); //맨뒤로 추가함
+        sliderInner.css("top" , ""); // 위치 초기화
+    });
+} , 2000);
 </code></pre>
                         </div>
                     </div>
