--- a/refer-effect/parallaxEffect/parallaxApple.html
+++ b/refer-effect/parallaxEffect/parallaxApple.html
@@ -1081,9 +1081,6 @@
                transform: rotate3d(1,0,0,-90deg); transform-origin: 20% 100%;
                opacity : 0;
            }
-           .s5Text2 {
-                color : #000;
-           }
         </style>
         <section id="section5">
             <div class="s5Text1 fixed">
@@ -1092,10 +1089,16 @@
                     data-44500 = "opacity : 1; transform: rotate3d(1,0,0,0deg); transform-origin: 20% 0%;"
                     data-45500 = "opacity : 0; transform: rotate3d(1,0,0,90deg); transform-origin: 20% 0%;"
                     
-                >Want to see more?</h2>
+                >Want to see more?
+            </h2>
+            <div class="contactBox"
+                data-46000 = "opacity : 0; transform: rotate3d(1,0,0,-90deg); transform-origin: 20% 0%;"
+                data-46500 = "opacity : 1; transform: rotate3d(1,0,0,0deg); transform-origin: 20% 0%;"
+                data-47500 = "opacity : 0; transform: rotate3d(1,0,0,90deg); transform-origin: 20% 0%;"
+            >
+                <h1>Contact Me!</h1>
+                <h1>kws7902@naver.com</h1>
             </div>
-            <div class="s5Text2">
-                <h2>Contact Me!</h2>
             </div>
         </section> <!-- //section5 -->
     </div>
